<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
     tools:context=".MainActivity">

    <Button
        android:id="@+id/acticity_main_btn_sp"
        android:text="@string/data_storage_sp"
        style="@style/btn_first_activity" />

    <Button
        android:id="@+id/acticity_main_btn_io"
        android:text="@string/data_storage_io"
        style="@style/btn_first_activity" />
    <Button
        android:id="@+id/acticity_main_btn_sql"
        android:text="@string/data_storage_sql"
        style="@style/btn_first_activity" />
    <Button
        android:id="@+id/acticity_main_btn_cp"
        android:text="@string/data_storage_cp"
        style="@style/btn_first_activity" />
    <Button
        android:id="@+id/acticity_main_btn_net"
        android:text="@string/data_storage_net"
        style="@style/btn_first_activity" />
</LinearLayout>
