<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.aliyeahyeah.datastorage.SharedPreferencesActivity">

    <EditText
        android:id="@+id/activity_sp_et_input_name"
        style="@style/btn_first_activity"
        android:hint="@string/sp_tv_hint_name" />

    <EditText
        android:id="@+id/activity_sp_et_input_age"
        style="@style/btn_first_activity"
        android:hint="@string/sp_tv_hint_age" />

    <Button
        android:id="@+id/activity_sp_btn_write"
        style="@style/btn_first_activity"
        android:text="@string/sp_btn_write" />

    <TextView
        android:id="@+id/activity_sp_tv_out"
        style="@style/btn_first_activity"
        android:hint="@string/sp_tv_out" />

    <Button
        android:id="@+id/activity_sp_btn_read"
        style="@style/btn_first_activity"
        android:text="@string/sp_btn_read" />
</LinearLayout>
